# securegate

./: .gitignore  GAP_ANALYSIS_AND_ROADMAP.md  GETTING_STARTED.md  README.md  RUNNING_LOCALLY.md  START.md  addon.py  pyproject.toml  requirements-gliner.txt  requirements-lite.txt  requirements.txt  run.py  run_api_in_terminal.sh  run_proxy.sh  run_proxy_in_terminal.sh  samples_for_chatgpt.txt  securegate.env.example  securegate_report_chapters_6_7.md  start_proxy.sh  start_securegate.sh  test_prompts.py
.venv-proxy/: pyvenv.cfg
config/: protected_domains.yaml
docs/: SCORING_AND_DECISION_FORMULAS.md  SYSTEM_DESIGN.md
llm/: SecureGate_Detector_redact_text_v2.pkl  Untitled0.ipynb
proxy/: __init__.py  securegate_addon.py
scratch/: check_pickle.py  test_accuracy_fix.py
securegate-desktop/: loading.html  main.js  package-lock.json  package.json
securegate-desktop/backend/: addon.py  launch_packaged.sh  requirements-proxy.txt  requirements.txt
securegate-desktop/src/: processManager.js  proxyManager.js
src/securegate/: __init__.py  action_engine.py  app.py  audit.py  config.py  decision_engine.py  llm_client.py  models.py  (+1 more)
tests/: __init__.py  conftest.py  test_action_engine.py  test_decision_engine.py  test_llm_classifier_detector.py  test_methodology_llm_classifier.py  test_methodology_ner.py  test_methodology_pattern.py  test_methodology_prompt_injection.py  test_methodology_semantic.py  test_ner_detector.py  test_pattern_detector.py  test_pipeline_integration.py  test_preprocessor.py  test_prompt_injection_detector.py  test_semantic_detector.py
(+29 files in other folders)
