[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securegate"
version = "0.1.0"
description = "Hybrid framework for real-time sensitive data leakage prevention in AI interactions"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
